<resources>
    <string name="app_name">financial-control</string>
    <string name="name">Name</string>
    <string name="last_name">Last name</string>
    <string name="enter">Enter</string>
    <string name="enter_your_name_and_last_name">Enter your name and last name to login</string>
    <string name="categories">Categories</string>
    <string name="supermarket">Supermarket</string>
    <string name="financial_control">Financial Control</string>
    <string name="home_expenses">Home Expenses</string>
    <string name="start_your_financial_control_to_grow">Start your financial control to grow</string>
    <string name="coffee_shop">Coffee shop</string>
    <string name="restaurants">Restaurants</string>
    <string name="pharmacy">Pharmacy</string>
    <string name="education">Education</string>
    <string name="transport">Transport</string>
    <string name="fun">Fun</string>
    <string name="this_month">This Month</string>
</resources>