<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controls">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/blue_app"
        android:gravity="center"
        android:theme="@style/ThemeOverlay.AppCompat.Dark"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_financial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:elevation="4dp"
        android:gravity="center"
        android:text="@string/financial_control"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/arrow_back"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:elevation="4dp"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintBottom_toBottomOf="@id/text_financial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_financial" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/categories"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/view_categories"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/blue_app"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="@id/textViewTitle"
        app:layout_constraintStart_toStartOf="@id/textViewTitle"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />

    <TextView
        android:id="@+id/text_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/this_month"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <View
        android:id="@+id/view_month"
        android:layout_width="170dp"
        android:layout_height="1dp"
        android:layout_marginTop="3dp"
        android:background="@color/blue_app"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="@id/text_month"
        app:layout_constraintStart_toStartOf="@id/text_month"
        app:layout_constraintTop_toBottomOf="@id/text_month" />

    <TextView
        android:id="@+id/text_supermarket"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="22dp"
        android:text="@string/supermarket"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle" />



    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/home_expenses"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_supermarket" />

    <TextView
        android:id="@+id/text_pharmacy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/pharmacy"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_home" />

    <TextView
        android:id="@+id/text_restaurants"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/restaurants"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_pharmacy" />

    <TextView
        android:id="@+id/text_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/coffee_shop"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_restaurants" />

    <TextView
        android:id="@+id/text_education"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/education"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_coffee" />

    <TextView
        android:id="@+id/text_transport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/transport"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_education" />

    <TextView
        android:id="@+id/text_fun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="@string/fun"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_transport" />

    <TextView
        android:id="@+id/text_investment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="Investments"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_fun" />

    <TextView
        android:id="@+id/text_shopping"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="20dp"
        android:text="Shopping"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_investment" />

    <ImageView
        android:id="@+id/ic_shopping"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_shopping"
        app:layout_constraintBottom_toBottomOf="@id/text_shopping"
        app:layout_constraintEnd_toStartOf="@id/text_shopping"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_shopping" />

    <ImageView
        android:id="@+id/ic_fun"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_fun"
        app:layout_constraintBottom_toBottomOf="@id/text_fun"
        app:layout_constraintEnd_toStartOf="@id/text_fun"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_fun" />

    <ImageView
        android:id="@+id/ic_coffee"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_coffee"
        app:layout_constraintBottom_toBottomOf="@id/text_coffee"
        app:layout_constraintEnd_toStartOf="@id/text_coffee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_coffee" />

    <ImageView
        android:id="@+id/ic_transport"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_transport"
        app:layout_constraintBottom_toBottomOf="@id/text_transport"
        app:layout_constraintEnd_toStartOf="@id/text_transport"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_transport" />

    <ImageView
        android:id="@+id/ic_investments"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_investments"
        app:layout_constraintBottom_toBottomOf="@id/text_investment"
        app:layout_constraintEnd_toStartOf="@id/text_investment"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_investment" />

    <ImageView
        android:id="@+id/ic_education"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_education"
        app:layout_constraintBottom_toBottomOf="@id/text_education"
        app:layout_constraintEnd_toStartOf="@id/text_education"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_education" />

    <ImageView
        android:id="@+id/ic_pharmacy"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_pharmacy"
        app:layout_constraintBottom_toBottomOf="@id/text_pharmacy"
        app:layout_constraintEnd_toStartOf="@id/text_pharmacy"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_pharmacy" />

    <ImageView
        android:id="@+id/ic_restaurants"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_restaurants"
        app:layout_constraintBottom_toBottomOf="@id/text_restaurants"
        app:layout_constraintEnd_toStartOf="@id/text_restaurants"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_restaurants" />

    <ImageView
        android:id="@+id/ic_home"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_home"
        app:layout_constraintBottom_toBottomOf="@id/text_home"
        app:layout_constraintEnd_toStartOf="@id/text_home"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_home" />

    <ImageView
        android:id="@+id/ic_supermarket"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_supermarket"
        app:layout_constraintBottom_toBottomOf="@id/text_supermarket"
        app:layout_constraintEnd_toStartOf="@id/text_supermarket"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/text_supermarket" />

</androidx.constraintlayout.widget.ConstraintLayout>